--- a/package.json
+++ b/package.json
@@ -7,13 +7,15 @@
     "test": "test"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "deploy:ropsten": "truffle deploy --network ropsten"
   },
   "keywords": [],
   "author": "SylTi <sylti@protonmail.com>",
   "license": "ISC",
   "dependencies": {
     "@openzeppelin/contracts": "^2.4.0",
-    "truffle": "^5.0.43"
+    "truffle": "^5.0.43",
+    "truffle-privatekey-provider": "^1.3.0"
   }
 }
